# MTSv

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  MANIFEST.in  README.md  Snakefile  bld.bat  build.sh  conda_build_config.yaml  environment.yml  ext_test.sh  install.sh  meta.yaml  name-summary.ipynb  setup.py
arbitrary_dna/src/: lib.rs
ext/: rustfmt.toml
ext/src/: align.rs  binner.rs  builder.rs  collapse.rs  error.rs  index.rs  io.rs  lib.rs  prep.rs  prep_config.rs  tax_tree.rs  util.rs
ext/ssw/: Cargo.toml
mtsv/: __init__.py  __main__.py  main.py  parameters.py  parsing.py  provenance.py  utils.py
mtsv/argutils/: __init__.py  export.py  read.py
mtsv/commands/: __init__.py  analyze.py  binning.py  binning_snek  command.py  extract.py  init.py  pipeline.py  readprep.py  readprep_snek  rules.py  summary.py  summary_snek
mtsv/data/: expected.data
mtsv/ext/: Cargo.toml
mtsv/mtsv_plugin/: main.py
mtsv/mtsv_prep/: MTSv_prune.py  main.py  taxidtool.cpp
mtsv/scripts/: MTSv_analyze.py  MTSv_candidate_taxa.py  MTSv_custom_build.py  MTSv_extract.py  MTSv_random_kmers.py  MTSv_signature.py  MTSv_summary.py  MTSv_unaligned_queries.py  analyze.py  datastore_management.py  mtsv_summary.py  random_kmers.py  summary.py  taxidtool.cpp  unaligned_queries.py
mtsv/templates/: report_template.html
mtsv_prep/: MTSv_prune.py  main.py
scripts/: MTSv_custom_build.py  MTSv_extract.py  MTSv_prune.py  MTSv_summary.py  README.md  taxidtool.cpp
src/: binner.rs  builder.rs  chunk.rs  collapse.rs  error.rs  index.rs  io.rs  prep.rs  prep_config.rs  tax_tree.rs  util.rs
ssw/: Cargo.toml  build.rs
ssw/src/: ssw.h
(+44 files in other folders)
